implemented eventManager to save every action

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,16 @@
       content="Web site created using create-react-app"
     />
     <style>
+        .preview-wrapper{
+          height: 70vh !important;
+          overflow-y: auto !important;
+        };
+      
       .accordion-button:not(.collapsed)::after {
-    background-image:none !important}
+          background-image:none !important
+        };
+      
+
     </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
